fixed bar alignment issue

--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ nav h1{
 }
 main>div{
     padding: 0 var(--padding);
+    padding-bottom: var(--nav_height);
     min-height: calc(100vh - var(--nav_height));
     display: flex;
     flex-direction: column;
@@ -54,7 +55,7 @@ main>div>p{
     border-top-width: 1px;
 }
 main>div>p:first-of-type{
-    /* padding-top: 0; */
+    padding-top: 0;
     border-top: none;
 }
 /* main>div>p:last-of-type{
